--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/winsnip-hot-auto-claim.git"
+    "url": "https://github.com/Winnode/Hot-Claim.git"
   }
 }
